Add durable DynamoDB Query capture store